Cleanup org.knime.core.workflow.tests dependencies + classpath
This commit fixes two problems with the org.knime.core.workflow.tests
fragment

- The classpath of this testing fragement was not set up correctly for
  java 11.
- The fragment had direct dependencies on downstream plugins of
  knime-core, which ended up on the classpath of org.knime.core. This
  could break the node repository, if this project was opened in
  eclipse while starting an AP.

--- a/org.knime.core.workflow.tests/pom.xml
+++ b/org.knime.core.workflow.tests/pom.xml
@@ -38,6 +38,46 @@
 							</requirement>
 							<requirement>
 								<type>eclipse-feature</type>
+								<id>org.knime.features.datageneration</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.xml</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.virtual</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.dbdrivers</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.core.streaming</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.ensembles</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.js.quickforms</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.quickform.legacy</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
 								<id>org.knime.features.ext.textprocessing</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
