--- a/org.knime.core.tests/pom.xml
+++ b/org.knime.core.tests/pom.xml
@@ -31,6 +31,11 @@
 								<id>org.knime.features.core</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.knime.features.clfixes</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
 				</configuration>
