AP-17083: Abbreviated XML value renderer
New default value renderer that abbreviates large XML strings to only 10 000 characters.
Removed unused XMLStreamException

AP-17083  (XML Reader (2): Add support for reading XML files and table preview)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -255,7 +255,7 @@
       <dataValue
             valueClass="org.knime.core.data.xml.XMLValue">
          <renderer
-               rendererFactoryClass="org.knime.core.data.xml.XMLValueRenderer$Factory"
+               rendererFactoryClass="org.knime.core.data.xml.XMLValueRenderer2$Factory"
                suggestAsDefault="true">
          </renderer>
       </dataValue>
