added deps to core-arrow and core-columnar (for tests)

--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,16 @@
 					<layout>p2</layout>
 					<url>${knime.virtual.p2}</url>
 				</repository>
+				<repository>
+					<id>p2-knime-core-arrow</id>
+					<layout>p2</layout>
+					<url>${knime.core.arrow.p2}</url>
+				</repository>
+				<repository>
+					<id>p2-knime-core-columnar</id>
+					<layout>p2</layout>
+					<url>${knime.core.columnar.p2}</url>
+				</repository>
 			</repositories>
 		</profile>
 	</profiles>
