NXT-655: RpcServerManager moved into org.knime.core.rpc
To be available to gateway-projects and a knime-js-core-project. And it
logically belongs there anyway.
The related NodePortRpcServerFactory extension point moved, too.

NXT-655 (API and implementation to register node views)

--- a/org.knime.core.rpc/build.properties
+++ b/org.knime.core.rpc/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                LICENSE.txt,\
-               .
+               .,\
+               plugin.xml
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
