NXT-697: Changes required for more tests on the new node views
The actual tests are in knime-js-core.

NXT-697 (Backend for UI Extensions in PageBuilder (Composite Views in classic AP))

--- a/org.knime.testing/plugin.xml
+++ b/org.knime.testing/plugin.xml
@@ -39,6 +39,11 @@
             factory-class="org.knime.testing.node.executioncount.ExecutionCountNodeFactory"
             >
       </node>
+      <node
+            deprecated="false"
+            factory-class="org.knime.testing.node.view.NodeViewNodeFactory"
+            hidden="false">
+      </node>
    </extension>
    <extension
          point="org.knime.workbench.repository.categories">
