--- a/org.knime.testing/plugin.xml
+++ b/org.knime.testing/plugin.xml
@@ -42,7 +42,7 @@
       <node
             deprecated="false"
             factory-class="org.knime.testing.node.view.NodeViewNodeFactory"
-            hidden="false">
+            hidden="true">
       </node>
    </extension>
    <extension
