--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -21,6 +21,7 @@
    <extension-point id="FlowVariableType" name="FlowVariableType" schema="schema/FlowVariableType.exsd"/>
    <extension-point id="ImageContentFactory" name="Contributes custom image content to an image port object (NO public API)" schema="schema/ImageContentFactory.exsd"/>
    <extension-point id="RpcTransportFactory" name="RpcTransportFactory" schema="schema/RpcTransportFactory.exsd"/>
+   <extension-point id="PortTypeClassMapper" name="PortTypeClassMapper" schema="schema/PortTypeClassMapper.exsd"/>
    <extension
          point="org.knime.core.NodeExecutionJobManagerFactory">
       <NodeExecutionJobManagerFactory
