--- a/org.knime.core/pom.xml
+++ b/org.knime.core/pom.xml
@@ -52,6 +52,12 @@
 						<version>${log4j2.version}</version>
 						<scope>compile</scope>
 					</dependency>
+                    <dependency>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>log4j-api</artifactId>
+                        <version>${log4j2.version}</version>
+                        <scope>compile</scope>
+                    </dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
