DEVOPS-1145: Added maven.properties to bin.excludes
DEVOPS-1145 (maven.properties file is part of some AP plug-ins)
https://knime-com.atlassian.net/browse/DEVOPS-1145

--- a/org.knime.core.data.uritype/build.properties
+++ b/org.knime.core.data.uritype/build.properties
@@ -7,3 +7,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
 			   CHANGELOG.md
 src.includes = LICENSE.txt
+bin.excludes = maven.properties
