--- a/org.knime.core.pmml/build.properties
+++ b/org.knime.core.pmml/build.properties
@@ -8,3 +8,4 @@ output.knime-pmml.jar = bin/eclipse/
 jars.extra.classpath = lib/schemas.jar
 src.includes = src/xmlbeans/,\
                LICENSE.TXT
+bin.excludes = maven.properties
