--- a/org.knime.core.ui.tests/build.properties
+++ b/org.knime.core.ui.tests/build.properties
@@ -5,3 +5,4 @@ bin.includes = META-INF/,\
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
+bin.excludes = maven.properties
