--- a/org.knime.core.ui/build.properties
+++ b/org.knime.core.ui/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
+bin.excludes = maven.properties
