--- a/org.knime.core/build.properties
+++ b/org.knime.core/build.properties
@@ -11,3 +11,4 @@ output.knime-core.jar = bin/eclipse/
 jars.extra.classpath = platform:/plugin/org.knime.core.pmml/lib/schemas.jar,\
                        lib/schemas.jar
 src.includes = LICENSE.txt
+bin.excludes = maven.properties
