--- a/org.knime.rsyntaxtextarea/build.properties
+++ b/org.knime.rsyntaxtextarea/build.properties
@@ -7,3 +7,4 @@ jars.compile.order = knime-rsyntaxtextarea.jar
 output.knime-rsyntaxtextarea.jar = bin/
 source.knime-rsyntaxtextarea.jar = src/
 src.includes = LICENSE.txt
+bin.excludes = maven.properties
