--- a/org.knime.slf4j.binding/build.properties
+++ b/org.knime.slf4j.binding/build.properties
@@ -7,3 +7,4 @@ source.. = src/main/java/,\
            src/main/resources/
 output.. = bin/
 src.includes = LICENSE.TXT
+bin.excludes = maven.properties
