--- a/org.knime.testing/build.properties
+++ b/org.knime.testing/build.properties
@@ -15,3 +15,4 @@ jars.compile.order = knime-testing.jar
 source.knime-testing.jar = src/,\
                            src-deprecated/
 output.knime-testing.jar = bin/
+bin.excludes = maven.properties
