--- a/org.knime.core/build.properties
+++ b/org.knime.core/build.properties
@@ -4,7 +4,17 @@ bin.includes = knime-core.jar,\
                LICENSE.txt,\
                lib/schemas.jar,\
                schema/,\
-               CHANGELOG.md
+               CHANGELOG.md,\
+               lib/opentelemetry-api-1.15.0.jar,\
+               lib/opentelemetry-context-1.15.0.jar,\
+               lib/opentelemetry-exporter-logging-1.15.0.jar,\
+               lib/opentelemetry-instrumentation-api-1.15.0-alpha.jar,\
+               lib/opentelemetry-sdk-1.15.0.jar,\
+               lib/opentelemetry-sdk-common-1.15.0.jar,\
+               lib/opentelemetry-sdk-logs-1.15.0-alpha.jar,\
+               lib/opentelemetry-sdk-metrics-1.15.0.jar,\
+               lib/opentelemetry-sdk-trace-1.15.0.jar,\
+               lib/opentelemetry-semconv-1.15.0-alpha.jar
 jars.compile.order = knime-core.jar
 source.knime-core.jar = src/eclipse/
 output.knime-core.jar = bin/eclipse/
