--- a/org.knime.core/.classpath
+++ b/org.knime.core/.classpath
@@ -2,6 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src/eclipse"/>
 	<classpathentry kind="src" output="bin/xmlbeans" path="src/xmlbeans"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.13.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-jr-objects-2.13.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opentelemetry-exporter-jaeger-1.15.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opentelemetry-exporter-logging-1.15.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opentelemetry-instrumentation-api-1.15.0-alpha.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations-13.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/kotlin-stdlib-1.4.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/kotlin-stdlib-common-1.4.0.jar"/>
