--- a/org.knime.core/build.properties
+++ b/org.knime.core/build.properties
@@ -19,7 +19,12 @@ bin.includes = knime-core.jar,\
                lib/okio-2.8.0.jar,\
                lib/opentelemetry-exporter-otlp-1.15.0.jar,\
                lib/opentelemetry-exporter-otlp-common-1.15.0.jar,\
-               lib/opentelemetry-sdk-logs-1.15.0-alpha.jar
+               lib/opentelemetry-sdk-logs-1.15.0-alpha.jar,\
+               lib/jackson-core-2.13.3.jar,\
+               lib/jackson-jr-objects-2.13.3.jar,\
+               lib/opentelemetry-exporter-jaeger-1.15.0.jar,\
+               lib/opentelemetry-exporter-logging-1.15.0.jar,\
+               lib/opentelemetry-instrumentation-api-1.15.0-alpha.jar
 jars.compile.order = knime-core.jar
 source.knime-core.jar = src/eclipse/
 output.knime-core.jar = bin/eclipse/
