--- a/org.knime.core/lib/fetch_jars/pom.xml
+++ b/org.knime.core/lib/fetch_jars/pom.xml
@@ -57,6 +57,10 @@
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-exporter-otlp</artifactId>
 		</dependency>
+        <dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-exporter-jaeger</artifactId>
+		</dependency>
 
 	</dependencies>
 
