getter setter for telemetry

--- a/org.knime.core/.classpath
+++ b/org.knime.core/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jackson-jr-objects-2.13.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/opentelemetry-exporter-jaeger-1.15.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/opentelemetry-exporter-logging-1.15.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/opentelemetry-instrumentation-api-1.15.0-alpha.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations-13.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/kotlin-stdlib-1.4.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/kotlin-stdlib-common-1.4.0.jar"/>
@@ -21,13 +20,13 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/opentelemetry-api-1.15.0.jar"/>
-	<classpathentry kind="lib" path="lib/opentelemetry-context-1.15.0.jar"/>
-	<classpathentry kind="lib" path="lib/opentelemetry-sdk-1.15.0.jar"/>
-	<classpathentry kind="lib" path="lib/opentelemetry-sdk-common-1.15.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-api-1.15.0.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1655815579100/source/opentelemetry-api-1.15.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-context-1.15.0.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1655815579100/source/opentelemetry-context-1.15.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-1.15.0.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1655815579100/source/opentelemetry-sdk-1.15.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-common-1.15.0.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1655815579100/source/opentelemetry-sdk-common-1.15.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/opentelemetry-sdk-metrics-1.15.0.jar"/>
-	<classpathentry kind="lib" path="lib/opentelemetry-sdk-trace-1.15.0.jar"/>
-	<classpathentry kind="lib" path="lib/opentelemetry-semconv-1.15.0-alpha.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-sdk-trace-1.15.0.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1655815579100/source/opentelemetry-sdk-trace-1.15.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/opentelemetry-semconv-1.15.0-alpha.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1655815579100/source/opentelemetry-semconv-1.15.0-alpha-sources.jar"/>
 	<classpathentry kind="lib" path="lib/schemas.jar"/>
 	<classpathentry kind="output" path="bin/eclipse"/>
 </classpath>
