AP-18695: Remove explicit UseG1GC argument from knime.ini
AP-18695 (Remove -XX:+UseG1GC option from knime.ini and update FAQ)

--- a/org.knime.core.workflow.tests/pom.xml
+++ b/org.knime.core.workflow.tests/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<surefireArgLine>-Dsun.java2d.d3d=false -Dosgi.classloader.lock=classname \
-		-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass -XX:+UseG1GC \
+		-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass \
 		-Dsun.net.client.defaultReadTimeout=0 -Xmx4G \
 		-XX:CompileCommand=exclude,javax/swing/text/GlyphView,getBreakSpot
 		</surefireArgLine>
