AP-19232: Add a static build of NodeDialog.umd.min.js to be able to show modern component dialogs
This can be removed once https://knime-com.atlassian.net/browse/UIEXT-437 is resolved

AP-19232 (Deep Dive: Python based Component)

--- a/org.knime.core.ui/build.properties
+++ b/org.knime.core.ui/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                LICENSE.txt,\
                plugin.xml,\
                .,\
-			   CHANGELOG.md
+               CHANGELOG.md,\
+               js-src/vue/dist/
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
