AP-19232: Add test for JS based SubNodeContainer dialogs
AP-19232 (Deep Dive: Python based Component)

--- a/org.knime.core.ui.tests/build.properties
+++ b/org.knime.core.ui.tests/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                LICENSE.txt,\
                .,\
-               files/
+               files/,\
+               fragment.xml
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
