AP-19232: Make sure bundle is unpacked when installed
AP-19232 (Deep Dive: Python based Component)

--- a/org.knime.core.ui/build.properties
+++ b/org.knime.core.ui/build.properties
@@ -1,10 +1,10 @@
 bin.includes = META-INF/,\
                LICENSE.txt,\
                plugin.xml,\
-               .,\
                CHANGELOG.md,\
-               js-src/vue/dist/
-source.. = src/eclipse/
+               js-src/vue/dist/,\
+               knime-core-ui.jar
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
 bin.excludes = maven.properties
+source.knime-core-ui.jar = src/eclipse/
