AP-19224: Implement Dense Bit and Byte Vector ValueFactories
... by storing all bits or bytes as low-level as possible.
The binary representation can be read by Python (Labs) and
appears the same way as the old Python integration read the
non-columnar storage versions of the Bit- and ByteVectors.

AP-19224 (Implement Dense Bit and Byte Vector Types)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -490,6 +490,10 @@
                cellClass="org.knime.core.data.vector.bytevector.DenseByteVectorCell"
                serializerClass="org.knime.core.data.vector.bytevector.DenseByteVectorCell$DenseByteVectorSerializer">
          </serializer>
+         <ValueFactory
+               deprecated="false"
+               valueFactoryClass="org.knime.core.data.v2.value.DenseByteVectorValueFactory">
+         </ValueFactory>
       </DataType>
       <DataType
             cellClass="org.knime.core.data.vector.bytevector.SparseByteVectorCell">
