--- a/org.knime.core.ui/plugin.xml
+++ b/org.knime.core.ui/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="nodetriples" name="Node Triple Provider Factory" schema="schema/nodetriples.exsd"/>
    <extension
          point="org.knime.core.RpcTransportFactory">
       <RpcTransportFactory
