UIEXT-437: Move default dialog from base.views to core.ui
UIEXT-437 (Move Table View and Default Node Dialog into knime-core)

--- a/org.knime.core.ui/build.properties
+++ b/org.knime.core.ui/build.properties
@@ -3,7 +3,9 @@ bin.includes = META-INF/,\
                plugin.xml,\
                CHANGELOG.md,\
                js-src/vue/dist/,\
-               knime-core-ui.jar
+               knime-core-ui.jar,\
+               lib/jsonschema-generator-4.20.0.jar,\
+               lib/classmate-1.5.1.jar
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
 bin.excludes = maven.properties
