--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 				<module>org.knime.core.data.uritype</module>
 				<module>org.knime.core.pmml</module>
 				<module>org.knime.core</module>
+				<module>org.knime.core.ui/lib/fetch_jars</module>
 				<module>org.knime.core.ui</module>
 				<module>org.knime.slf4j.binding</module>
 				<module>org.knime.testing</module>
@@ -47,6 +48,7 @@
 				<module>org.knime.core.pmml</module>
 				<module>org.knime.core</module>
 				<module>org.knime.core.tests</module>
+				<module>org.knime.core.ui/lib/fetch_jars</module>
 				<module>org.knime.core.ui</module>
 				<module>org.knime.core.ui.tests</module>
 				<module>org.knime.rsyntaxtextarea</module>
