UIEXT-437: Move table view logic from base.views to core.ui
UIEXT-437 (Move Table View and Default Node Dialog into knime-core)

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 				<module>org.knime.core.tests</module>
 				<module>org.knime.core.ui/lib/fetch_jars</module>
 				<module>org.knime.core.ui</module>
+				<module>org.knime.core.ui.tests/lib/fetch_jars</module>
 				<module>org.knime.core.ui.tests</module>
 				<module>org.knime.rsyntaxtextarea</module>
 				<module>org.knime.testing</module>
