--- a/org.knime.core.ui.tests/.classpath
+++ b/org.knime.core.ui.tests/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/eclipse"/>
+	<classpathentry exported="true" kind="lib" path="lib/byte-buddy-1.11.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/byte-buddy-agent-1.11.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mockito-core-3.12.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mockito-inline-3.12.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/objenesis-3.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11"/>
 	<classpathentry kind="output" path="bin/eclipse"/>
