--- a/org.knime.core.ui.tests/build.properties
+++ b/org.knime.core.ui.tests/build.properties
@@ -2,7 +2,12 @@ bin.includes = META-INF/,\
                LICENSE.txt,\
                .,\
                files/,\
-               fragment.xml
+               fragment.xml,\
+               lib/byte-buddy-1.11.12.jar,\
+               lib/byte-buddy-agent-1.11.12.jar,\
+               lib/mockito-core-3.12.0.jar,\
+               lib/mockito-inline-3.12.0.jar,\
+               lib/objenesis-3.2.jar
 source.. = src/eclipse/
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
