UIEXT-437: Fix tests in org.knime.core.ui.tests
Also, fix dependency / build chain issues

UIEXT-437 (Move Table View and Default Node Dialog into knime-core)

--- a/org.knime.core.ui/build.properties
+++ b/org.knime.core.ui/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                js-src/vue/dist/,\
                knime-core-ui.jar,\
                lib/jsonschema-generator-4.20.0.jar,\
-               lib/classmate-1.5.1.jar
+               lib/classmate-1.5.1.jar,\
+               lib/slf4j-api-1.7.32.jar
 output.. = bin/eclispe/
 src.includes = LICENSE.txt
 bin.excludes = maven.properties
