--- a/org.knime.core.ui/.classpath
+++ b/org.knime.core.ui/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/eclipse"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.32.jar"/>
 	<classpathentry kind="lib" path="lib/classmate-1.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jsonschema-generator-4.20.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
