UIEXT-437: Configure bitbucket pipelines
UIEXT-437 (Move Table View and Default Node Dialog into knime-core)

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,21 +8,19 @@ definitions:
           - node
         script:
           - git submodule update --init
-          - cd org.knime.base.views/js-src/vue
+          - cd org.knime.core.ui/js-src/vue
           - npm ci
           - npm run ci:lint
           - npm run coverage -- --ci
           - npm run build
           - npm run ci:audit
         artifacts:
-          - org.knime.base.views/js-src/vue/dist/**
+          - org.knime.core.ui/js-src/vue/dist/**
 
 pipelines:
   pull-requests:
     '**':
-      - parallel:
-        - step: *vue-lint-test-build
+      - step: *vue-lint-test-build
   branches:
     master:
-      - parallel:
-        - step: *vue-lint-test-build
+      - step: *vue-lint-test-build
