AP-15564: Fix serialization logic for XMLFileStoreCell
AP-15564 (Implement ValueFactory for FileStoreCells)

--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -446,6 +446,10 @@
                cellClass="org.knime.core.data.xml.XMLBlobCell"
                serializerClass="org.knime.core.data.xml.XMLBlobCell$XMLSerializer">
          </serializer>
+         <serializer
+               cellClass="org.knime.core.data.xml.XMLFileStoreCell"
+               serializerClass="org.knime.core.data.xml.XMLFileStoreCell$XMLSerializer">
+         </serializer>
          <ValueFactory
                valueFactoryClass="org.knime.core.data.xml.XMLValueFactory">
          </ValueFactory>
