Use cross-env to enable npm builds on windows

--- a/org.knime.core.ui/js-src/package.json
+++ b/org.knime.core.ui/js-src/package.json
@@ -9,9 +9,9 @@
     "dev:TableView": "concurrently -n server,app -c yellow,blue \"http-server -c-1 --cors -p 4000 dist/ http-server\" \"npm run build:TableView -- --watch\"",
     "dev:Statistics": "concurrently -n server,app -c yellow,blue \"http-server -c-1 --cors -p 4000 dist/ http-server\" \"npm run build:Statistics -- --watch\"",
     "build": "npm run cleanDist && npm run build:NodeDialog && npm run build:TableView && npm run build:Statistics",
-    "build:NodeDialog": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --no-clean --target lib --formats umd-min --name DefaultNodeDialog --filename NodeDialog src/components/NodeDialog.vue",
-    "build:TableView": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --no-clean --target lib --formats umd-min --name \"view_org.knime.base.views.node.tableview.TableViewNodeFactory\" --filename TableView src/components/TableView.vue",
-    "build:Statistics": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --no-clean --target lib --formats umd-min --name \"view_org.knime.base.views.node.statistics.StatisticsNodeFactory\" --filename StatisticsView src/components/TableView.vue",
+    "build:NodeDialog": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --no-clean --target lib --formats umd-min --name DefaultNodeDialog --filename NodeDialog src/components/NodeDialog.vue",
+    "build:TableView": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --no-clean --target lib --formats umd-min --name \"view_org.knime.base.views.node.tableview.TableViewNodeFactory\" --filename TableView src/components/TableView.vue",
+    "build:Statistics": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --no-clean --target lib --formats umd-min --name \"view_org.knime.base.views.node.statistics.StatisticsNodeFactory\" --filename StatisticsView src/components/TableView.vue",
     "cleanDist": "rimraf dist",
     "inspect": "vue-cli-service inspect",
     "lint": "run-p 'lint:* -- --fix'",
@@ -51,6 +51,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.9.0",
     "concurrently": "5.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.25.0",
     "http-server": "0.12.3",
     "jest-junit": "7.0.0",
