AP-20111: include log4j 2 in core feature
* add log4j2 plugin and log4j-to-slf4j bridge to core feature
* add tests to ensure log4j2 logs are forwarded to the KNIME slf4j node logger
  (this is a copy of org.knime.slf4j.binding.tests using a log4j 2.x logger)

AP-20111 (Include log4j 2 in KNIME target platform)

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 				<module>org.knime.core.workflow.tests</module>
 				<module>org.knime.slf4j.binding</module>
 				<module>org.knime.slf4j.binding.tests</module>
+				<module>org.knime.log4j2.tests</module>
 			</modules>
 
 			<repositories>
