--- a/org.knime.core.data.uritype/.settings/org.sonarlint.eclipse.core.prefs
+++ b/org.knime.core.data.uritype/.settings/org.sonarlint.eclipse.core.prefs
@@ -1,6 +1,6 @@
 autoEnabled=true
 eclipse.preferences.version=1
 idePrefixKey=
-projectKey=org.knime\:knime-core
-serverId=sonar.knime.com
+projectKey=KNIME_knime-core
+serverId=SonarCloud
 sqPrefixKey=org.knime.core.data.uritype
