AP-20406: New metadata XML file format
AP-20406 (WorkflowMetaData API (near WorkflowDef))

--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
 					<url>${knime.credentials.base.p2}</url>
 				</repository>
 				<repository>
-					<id>p2-knime-gatewway</id>
+					<id>p2-knime-gateway</id>
 					<layout>p2</layout>
 					<url>${knime.gateway.p2}</url>
 				</repository>
